<resources>
    <string name="app_name">YxgApp</string>
    <string name="search_mail">首页</string>
    <string name="near">附近</string>
    <string name="disclose">吐槽</string>
    <string name="action_settings">Settings</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="loading">加载中...</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_error">"手势密码不对"</string>
    <string name="app_des">\"Mary Morstan mendatangi Sherlock Holmes untuk meminta bantuannya memecahkan sebuah misteri. Sepuluh tahun yang lalu, ayah Mary, Kapten Arthur Morstan, kembali ke London dengan mengambil cuti dari resimennya di India. Katanya, di sana ia dan seorang temannya, Thaddeus Sholto, mendapatkan harta karun yang sangat besar jumlahnya. Tapi ketika Mary tiba di hotel tempat ayahnya tinggal, sang ayah sudah lenyap tanpa jejak. Sherlock Holmes menyambut misteri ini sebagai tantangan menarik. Lebih menarik daripada kokain yang telah membuatnya ketagihan bila sedang tak ada kegiatan. Dan kali ini pun Dr. Watson menyertainya, terutama karena ia sangat tertarik pada Mary Morstan yang di matanya begitu memesona.\"</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <string name="cardinal_north">N</string>
    <string name="cardinal_east">E</string>
    <string name="cardinal_south">S</string>
    <string name="cardinal_west">W</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mood1">静静的享受独自一个人的午后时光</string>
    <string name="mood2">没有什么过不去，只是再也回不去</string>
    <string name="mood3">做你想做的梦，去你想去的地方</string>
    <string name="mood4">别让借口阻挡你完成你的目标</string>
    <string name="mood5">我们生来为赢，而非为输</string>
    <string name="title_location">获取定位数据</string>
    <string name="location">获取定位数据</string>
    <string name="location_dec">调用定位接口获取定位数据</string>
    <string name="title_geoFence">地理围栏</string>
    <string name="geoFence">地理围栏</string>
    <string name="geoFence_dec">展示地理围栏功能</string>
    <string name="roundGeoFence">圆形地理围栏</string>
    <string name="roundGeoFence_dec">展示圆形地理围栏</string>
    <string name="polygonGeoFence">多边形地理围栏</string>
    <string name="polygonGeoFence_dec">展示多边形地理围栏</string>
    <string name="keywordGeoFence">关键字地理围栏</string>
    <string name="keywordGeoFence_dec">展示关键字地理围栏</string>
    <string name="nearbyGeoFence">周边地理围栏</string>
    <string name="nearbyGeoFence_dec">展示周边地理围栏</string>
    <string name="districtGeoFence">行政区划地理围栏</string>
    <string name="districtGeoFence_dec">展示行政区划地理围栏</string>
    <string name="multipleGeoFence">综合展示</string>
    <string name="multipleGeoFence_dec">综合展示地理围栏的功能</string>
    <string name="oldGeoFence">旧版地理围栏</string>
    <string name="oldGeoFence_dec">旧版地理围栏，不建议使用</string>
    <string name="title_assistantLocation">H5辅助定位</string>
    <string name="assistantLocation">H5辅助定位</string>
    <string name="assistantLocation_dec">展示H5辅助定位功能</string>
    <string name="title_tools">地图计算工具</string>
    <string name="tools">地图计算工具</string>
    <string name="tools_dec">坐标转换等功能演示</string>
    <string name="title_lastLocation">获取最后一次位置</string>
    <string name="lastLocation">获取最后一次位置</string>
    <string name="lastLocation_dec">获取最后一次定位的位置，此位置是一个历史位置</string>
    <string name="title_alarmCPU">定时唤起CPU</string>
    <string name="alarmCPU">定时唤起cpu</string>
    <string name="alarmCPU_dec">通过一个闹钟程序后台定时唤起cpu</string>
    <string name="title_errorCode">错误码说明</string>
    <string name="errorCode">错误码说明</string>
    <string name="errorCode_dec">错误码说明以及对应的解决方法</string>
    <string name="defaultInteval">2000</string>
    <string name="defaultHttpTimeout">30000</string>
    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="wifiScan">开启wifi扫描</string>
    <string name="alarmInterval">唤醒周期(s)</string>
    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>
    <string name="fenceRadius">围栏半径</string>
    <string name="meter">米</string>
    <string name="activatesAction">触发条件</string>
    <string name="alertIn">进入</string>
    <string name="alertOut">离开</string>
    <string name="alertStated">停留</string>
    <string name="addFence">添加围栏</string>
    <string name="removeFence">移除围栏</string>
    <string name="hideOption">隐藏设置</string>
    <string name="showOption">显示设置</string>
    <string name="showList">显示列表</string>
    <string name="hideList">隐藏列表</string>
    <string name="fence_round">圆形围栏</string>
    <string name="fence_polygon">多变形</string>
    <string name="fence_keyword">关键字围栏</string>
    <string name="fence_nearby">周边围栏</string>
    <string name="fence_district">行政区划围栏</string>
    <string name="getLastLocation">获取最后位置</string>
    <string name="startAssistantLocation">启动H5辅助定位</string>
    <string name="stopAssistantLocation">停止H5辅助定位</string>
    <string name="urlLocation">浏览器定位</string>
    <string name="assistantLocationInfo">辅助定位已经启动，请点击模拟浏览器请求或者在浏览器中输入http://127.0.0.1:43689/进行测试</string>
    <string name="coordinateConvert">坐标转换</string>
    <string name="checkIsChina">位置区域判断</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
	<string name="errorCodeInfo">
	    0	定位成功。	可以在定位回调里判断定位返回成功后再进行业务逻辑运算\n
	    1	一些重要参数为空，如context；	请对定位传递的参数进行非空判断\n
	    2	定位失败，由于仅扫描到单个wifi，且没有基站信息。	请重新尝试\n
	    3	获取到的请求参数为空，可能获取过程中出现异常。	请对所连接网络进行全面检查，请求可能被篡改\n
	    4	请求服务器过程中的异常，多为网络情况差，链路不通导致	请检查设备网络是否通畅\n
	    5	返回的XML格式错误，解析失败。	请稍后再试\n
	    6	定位服务返回定位失败。	请将errorDetail（通过getLocationDetail()方法获取）信息通过工单系统反馈给我们\n
	    7	KEY鉴权失败。	请仔细检查key绑定的sha1值与apk签名sha1值是否对应，或通过高频问题查找相关解决办法\n
	    8	Android exception常规错误	请将errordetail（通过getLocationDetail()方法获取）信息通过工单系统反馈给我们\n
	    9	定位初始化时出现异常。	请重新启动定位\n
	    10	定位客户端启动失败。	请检查AndroidManifest.xml文件是否配置了APSService定位服务\n
	    11	定位时的基站信息错误。	请检查是否安装SIM卡，设备很有可能连入了伪基站网络\n
	    12	缺少定位权限。	请在设备的设置中开启app的定位权限\n
	</string>
    <string name="animate">Animate</string>
    <string name="basic_map">显示地图</string>
    <string name="basic_description">介绍如何创建一个基本地图</string>
    <string name="basic_texturemapview">显示地图(TextureMapView)</string>
    <string name="basic_texturemapview_description">介绍如何使用TextureMapview创建一个基本地图</string>
    <string name="base_fragment_map">Fragment创建地图</string>
    <string name="base_fragment_description">介绍SupportMapFragment方式创建地图</string>
    <string name="camera_demo">改变地图中心点</string>
    <string name="camera_description">介绍在地图中操作Camera各种功能</string>
    <string name="heatmap_demo">热力图功能</string>
    <string name="heatmap_description">介绍在地图中如何绘制热力图</string>
    <string name="viewpager_map">ViewPager TextureMapView</string>
    <string name="viewpger_map_description">介绍如何在ViewPager中添加Map(防止滑动时黑屏)</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">AMaps3D Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="events_demo">Events功能</string>
    <string name="events_description">介绍对地图的点击，长按，拖动地图事件功能</string>
    <string name="fill_stroke">Fill Stroke</string>
    <string name="fill_color">Fill Color</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="hybrid">Hybrid</string>
    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
        <item>@string/night_mode</item>
        <item>@string/navi_mode</item>
    </string-array>
    <string name="poiclick_demo">地图Poi点击功能</string>
    <string name="poiclick_description">介绍地图底图poi点击事件和处理</string>
    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图图层控制</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationSensorGPS_demo">gps追随功能</string>
    <string name="locationSensorGPS_demo_description">介绍如何用gps定位图标箭头随手机转动而转动</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="locationmodesource_demo">Location三种模式</string>
    <string name="locationmodesource_description">介绍定位、追随、选择不同模式使用</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="touch_the_map">地图触摸事件</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="night_mode">Night</string>
    <string name="navi_mode">Navi</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="navigatearrow_demo">NavigateArrow功能</string>
    <string name="navigatearrow_description">介绍如何在地图中绘制导航指示箭头功能</string>
    <string name="arc_demo">绘制弧线</string>
    <string name="arc_description">介绍在地图中绘制弧形</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="set_min_max_zoomlevel">限制缩放级别功能</string>
    <string name="set_min_max_zoomlevel_description">介绍对地图进行最小最大级别的设置</string>
    <string name="limit_bounds">限制显示区域功能</string>
    <string name="limit_bounds_description">介绍对地图进行限制显示区域的设置</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
</resources>