<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="心情文字"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="取消"
            android:textColor="#51CCEF"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="#999999" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="推荐"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="#BBBBBB" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/mood1"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="#BBBBBB" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/mood2"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="#BBBBBB" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/mood3"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="#BBBBBB" />

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/mood4"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="#BBBBBB" />

    <TextView
        android:id="@+id/tv_5"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/mood5"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="#BBBBBB" />

</LinearLayout>